Upgraded some plugin versions.